--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>TP-1: Funciones en JavaScript</title>
+        <title>Pagina Principal</title>
     </head>
 <body>
    
