--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <a href="tp3/index.html">TP3</a>
         <a href="tp4/index.html">TP4</a>
         <a href="tp5/index.html">TP5</a>
+        <a href="tp6/index.html">TP6</a>
     </nav>
 </body>
 
